<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AyudaActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="25dp"
            android:orientation="vertical">


            <TextView
                android:id="@+id/textViewTiInstrucciones"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="18dp"
                android:textSize="23sp"
                android:gravity="center"
                android:text="@string/ti_instrucciones" />

            <TextView
                android:id="@+id/textViewTxtSistema"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:layout_marginBottom="25dp"
                android:text="@string/txtSistema" />

            <TextView
                android:id="@+id/textViewTiRegEstudiante"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="23sp"
                android:layout_marginBottom="18dp"
                android:text="@string/ti_registrar_estudiante" />

            <TextView
                android:id="@+id/textViewTxtRegEstudiante"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:layout_marginBottom="25dp"
                android:text="@string/txt_registrar_estudiante" />

            <TextView
                android:id="@+id/textViewTiEstadisticas"
                android:layout_width="match_parent"
                android:textSize="23sp"
                android:layout_marginBottom="18dp"
                android:layout_height="wrap_content"
                android:text="@string/ti_visualizar_estadisticas" />
            <TextView
                android:id="@+id/textViewTxtEstadisticas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/txt_visualizar_estadisticas" />

        </LinearLayout>
    </ScrollView>

</ScrollView>